generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Carpeta {
  category            String     @default("SinEspecificar")
  ciudad              String?
  codeudor            Codeudor?
  demanda             Demanda?
  deudor              Deudor?
  facturas            Factura[]
  fecha               DateTime?
  fechaUltimaRevision DateTime?  @db.Date
  id                  Int
  idProcesos          Int[]
  idRegUltimaAct      Int?
  juzgado             Juzgado?   @relation(fields: [juzgadoId, juzgadoTipo, juzgadoCiudad], references: [id, tipo, ciudad])
  juzgadoCiudad       String?
  juzgadoId           String?
  juzgadoTipo         String?
  llaveProceso        String
  nombre              String
  notas               Nota[]
  notasCount          Int?
  numero              Int        @id
  procesos            Proceso[]
  revisado            Boolean    @default(false)
  tareas              Task[]
  terminado           Boolean    @default(false)
  tipoProceso         String     @default("SINGULAR")
  ultimaActuacion     Actuacion? @relation(fields: [idRegUltimaAct], references: [idRegActuacion])
  updatedAt           DateTime   @updatedAt
}

model Factura {
  id                 String          @id
  facturaElectronica String?
  secondaryFactura   Json?
  ciudad             String
  dv                 Int
  fecha              DateTime        @db.Date
  razonSocial        String
  nombreComercial    String?
  direccion          String
  valorBase          Decimal         @db.Money
  hasOtroImp         Boolean         @default(false)
  hasIva             Boolean         @default(false)
  hasIcui            Boolean         @default(false)
  hasImpoConsumo     Boolean         @default(false)
  nit                Int
  valorIva           Decimal?        @db.Money
  valorOtroImp       Decimal?        @db.Money
  valorTotal         Decimal         @db.Money
  concepto           String
  carpetaNumero      Int?
  CUFE               String?
  QRCode             String?
  carpeta            Carpeta?        @relation(fields: [carpetaNumero], references: [numero])
  emisorDeFactura    EmisorDeFactura @relation(fields: [nit], references: [nit])
}

model EmisorDeFactura {
  nit                       Int       @id
  dv                        Int
  razonSocial               String
  nombreComercial           String?
  direccion                 String?
  correo                    String?
  telefono                  Int?
  actividadEconomica        String?
  regimenFiscal             String?
  responsabilidadTributaria String?
  tipoContribuyente         String    @default("Juridica")
  ciudad                    String    @default("Bogota")
  facturas                  Factura[]
}

model Deudor {
  carpetaNumero   Int     @unique
  cedula          String
  direccion       String?
  email           String?
  id              Int     @id
  primerApellido  String
  primerNombre    String
  segundoApellido String?
  segundoNombre   String?
  telCelular      String?
  telFijo         String?
  carpeta         Carpeta @relation(fields: [carpetaNumero], references: [numero])
}

model Codeudor {
  carpetaNumero Int     @unique
  cedula        String?
  direccion     String?
  id            Int     @id
  nombre        String?
  telefono      String?
  carpeta       Carpeta @relation(fields: [carpetaNumero], references: [numero])
}

model Demanda {
  carpetaNumero           Int                @unique
  departamento            String?
  despacho                String?
  entregaGarantiasAbogado DateTime?          @db.Date
  etapaProcesal           String?
  llaveProceso            String?
  fechaPresentacion       DateTime[]         @db.Date
  id                      Int                @id
  tipoProceso             String
  municipio               String?
  obligacion              String[]
  radicado                String?
  vencimientoPagare       DateTime[]         @db.Date
  capitalAdeudado         Decimal            @default(0) @db.Money
  mandamientoPago         DateTime[]         @db.Date
  avaluo                  Decimal            @default(0) @db.Money
  liquidacion             Decimal            @default(0) @db.Money
  carpeta                 Carpeta            @relation(fields: [carpetaNumero], references: [numero])
  medidasCautelares       MedidasCautelares?
  notificacion            Notificacion?
}

model Notificacion {
  demandaId      Int        @unique
  certimail      Boolean?
  fisico         Boolean?
  id             Int        @id
  autoNotificado DateTime?  @db.Date
  demanda        Demanda    @relation(fields: [demandaId], references: [id])
  notifiers      Notifier[]
}

model MedidasCautelares {
  demandaId         Int       @unique
  fechaOrdenaMedida DateTime?
  id                Int       @id
  medidaSolicitada  String?
  demanda           Demanda   @relation(fields: [demandaId], references: [id])
}

model Notifier {
  fechaAporta    DateTime?
  fechaRecibido  DateTime?
  notificacionId Int
  resultado      Boolean?
  tipo           String
  carpetaNumero  Int
  notificacion   Notificacion @relation(fields: [notificacionId], references: [id])

  @@id([tipo, carpetaNumero])
}

model Nota {
  carpetaNumero Int?
  createdAt     DateTime  @default(now())
  id            String    @id
  pathname      String?
  updatedAt     DateTime  @updatedAt
  dueDate       DateTime? @db.Date
  text          String
  content       String[]
  carpeta       Carpeta?  @relation(fields: [carpetaNumero], references: [numero])
}

model Task {
  carpetaNumero Int?
  done          Boolean  @default(false)
  createdAt     DateTime @default(now())
  dueDate       DateTime @db.Date
  id            Int      @id @default(autoincrement())
  text          String
  updatedAt     DateTime @updatedAt
  content       String[]
  carpeta       Carpeta? @relation(fields: [carpetaNumero], references: [numero])
}

model Actuacion {
  actuacion      String
  anotacion      String?
  cant           Int
  carpetaNumero  Int?
  codRegla       String
  conDocumentos  Boolean
  consActuacion  Int
  createdAt      DateTime  @default(now())
  fechaActuacion DateTime  @db.Date
  fechaFinal     DateTime? @db.Date
  fechaInicial   DateTime? @db.Date
  fechaRegistro  DateTime  @db.Date
  idProceso      Int
  idRegActuacion Int       @id
  isUltimaAct    Boolean
  llaveProceso   String
  procesoId      Int?
  proceso        Proceso?  @relation(fields: [procesoId], references: [idProceso])
  Carpeta        Carpeta[]
}

model Juzgado {
  id      String
  tipo    String
  ciudad  String
  url     String
  Carpeta Carpeta[]
  Proceso Proceso[]

  @@id([id, tipo, ciudad])
}

model Proceso {
  id                   Int         @id @default(autoincrement())
  cantFilas            Int
  carpetaNumero        Int
  departamento         String
  despacho             String
  esPrivado            Boolean
  fechaProceso         DateTime?   @db.Date
  fechaUltimaActuacion DateTime?   @db.Date
  idConexion           Int
  idProceso            Int         @unique
  juzgadoTipo          String
  llaveProceso         String
  sujetosProcesales    String
  juzgadoId            String
  juzgadoCiudad        String
  actuaciones          Actuacion[]
  carpeta              Carpeta     @relation(fields: [carpetaNumero], references: [numero])
  juzgado              Juzgado     @relation(fields: [juzgadoId, juzgadoTipo, juzgadoCiudad], references: [id, tipo, ciudad])
}

enum NotifierName {
  DOS91
  DOS92
}

enum Category {
  Terminados
  LiosJuridicos
  Bancolombia
  Reintegra
  Insolvencia
  SinEspecificar
  todos
}

enum Departamento {
  BOGOTA
  CUNDINAMARCA
  META
  ANTIOQUIA
  ATLANTICO
}

enum TipoProceso {
  HIPOTECARIO
  PRENDARIO
  SINGULAR
  ACUMULADO
}
